--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -33,15 +33,13 @@
                 <a href="{{ url_for('main.user', username=post.author.username) }}">{{ post.author.username }}</a>
             </div>
             <div class="post-body">
-                <!--摘要|striptags|safe|truncatechars:100|linebreaks-->
-                {% if post.body_html %}
-                <!--markdown转换成的html在服务器上生成，可以放心渲染-->
-                {{ post.body_html |safe|striptags|truncate(length=100,killwords=False) }}
-                {% else %}
-                {{ post.body |safe|striptags|truncate(length=100,killwords=False) }}
+               <!--摘要-->
+               {% if post.body %}
+               <!--文章中有表格怎么办-->
+                {{ post.body | safe| striptags |truncate(length=100,killwords=False) }}
                 {% endif %}
+                
             </div>
-            <br>
                 <div class="row">
                     <div class="col-xs-4" >
                         {{ moment(post.timestamp).format('LLL') }}
@@ -55,6 +53,5 @@
             </div>
         </div>
      </li>
-     <br>
      {% endfor %}
  </ul>
