--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -6,10 +6,10 @@
 
 <div class = "page-header">
 	<div class="text-primary">
-		银河系十佳青年王老汉<br>
-		479260115@qq.com<br>
-		关于《Flask Web开发：基于Python的Web应用开发实战》的练习的demo。<br>
-		仅仅是学习记录，不作他用。前端完全不会，全靠copy。
+		<strong>银河系十佳青年王老汉</strong><br>
+		<strong>479260115@qq.com</strong><br>
+		<strong>关于《Flask Web开发：基于Python的Web应用开发实战》的练习的demo。</strong><br>
+		<strong>仅仅是学习记录，不作他用。前端完全不会，全靠copy。</strong>
 	</div>
 </div>
 {% endblock %}
