--- a/app/templates/onepost.html
+++ b/app/templates/onepost.html
@@ -15,7 +15,7 @@
 {% if pagination %}
 <div class="pagination">
     <!--评论的分页导航链接也加上#comments-->
-    {{ macros.pagination_widget(pagination,'main.post',fragment = '#comments',id = posts[0].id) }}
+    {{ macros.pagination_widget(pagination,'main.allonepost',fragment = '#comments',id = post.id) }}
 </div>
 {% endif %}
 
