--- a/app/templates/_comments.html
+++ b/app/templates/_comments.html
@@ -21,9 +21,7 @@
             <div class="comment-date">{{ moment(comment.timestamp).fromNow() }}</div>
             <div class="comment-author"><a href="{{ url_for('main.user', username=comment.author.username) }}">{{ comment.author.username }}</a></div>
             <div class="comment-body">
-                {% if comment.body_html %}
-                    {{ comment.body_html | safe }}
-                {% else %}
+                {% if comment.body %}
                     {{ comment.body }}
                 {% endif %}
             </div>
