--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -5,10 +5,11 @@
 {% block page_content %}
 
 <div class = "page-header">
-	<div class="text-primary">
+	<div class="text-default">
 		<strong>银河系十佳青年王老汉</strong><br>
 		<strong>479260115@qq.com</strong><br>
 		<strong>关于《Flask Web开发：基于Python的Web应用开发实战》的练习的demo。</strong><br>
+		<strong><a href="https://blog.csdn.net/weixin_38256474/article/details/81332147" target="_blank">结合CSDN“神是念着倒”《Flask mega-tutorial（Flask超级教程）》学习的过程。</a></strong><br>
 		<strong>仅仅是学习记录，不作他用。前端完全不会，全靠copy。</strong>
 	</div>
 </div>
