--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% import "_macros.html" as macros %}
 
-{% block title %}首页{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block head %}
 {{ super() }}
