--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,9 +8,14 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 {% endblock %}
 
-
 {% block navbar %}
-<div class="navbar navbar-inverse" role ="navigation">
+<!--固定顶部导航栏，并下降内容，不然遮挡了-->
+<style>
+  body{
+    padding-top:55px;
+  }
+</style>
+<div class="navbar navbar-inverse navbar-fixed-top" role ="navigation">
     <div class="container"> 
     <div class="navbar-header">
         <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".navbar-collapse">
@@ -24,8 +29,19 @@
     <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
             <li><a href="{{ url_for('main.index') }}"><span class = "glyphicon glyphicon-home"></span> 首页</a></li>
+            {% if current_user.is_authenticated %}
+            <li><a href="{{ url_for('main.myfollow') }}"><span class = "glyphicon glyphicon-heart"></span> 我的关注</a></li>
+            {% endif %}
             <li><a href="{{ url_for('main.about') }}"><span class = "glyphicon glyphicon-info-sign"></span> 关于</a></li>
         </ul>
+        {% if current_user %}
+        <form class="navbar-form navbar-left" action = "{{ url_for('main.search') }}" method="POST">
+        	<div class="form-group">
+          		<input type="text" class="form-control" placeholder="站内搜索" name = "search">
+        	</div>
+        	<button type="submit" class="btn btn-default">搜索</button>
+      	</form>
+        {% endif %}
         <ul class="nav navbar-nav navbar-right"> 
         	{% if current_user.is_authenticated %}
            <li class="dropdown">
@@ -47,7 +63,6 @@
 </div>
 {% endblock %}
 
-
 {% block content %}
 	<div class="container">
 		{% for message in get_flashed_messages() %}
@@ -60,6 +75,7 @@
 		{% block page_content %}{% endblock %}
 	</div>
 {% endblock %}
+
 
 {% block scripts %}
 {{ super() }}
