--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% import "_macros.html" as macros %}
 
-{% block title %}首页{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block head %}
 {{ super() }}
@@ -14,7 +14,7 @@
 	<div class="page-header">
 		<h4><strong>Hello，
 		{% if current_user.is_authenticated %}
-		{{current_user.username}}。可以在这里发表你的看法。
+		{{current_user.username}}。
 		{% else %}
 		瓜皮，你还没有登录。
 		{% endif %}
@@ -22,24 +22,27 @@
 	</div>
 	<div>
 		{% if current_user.is_authenticated %}
-			<!--{{ wtf.quick_form(form) }}-->
-		<div>
-			<form method="post" action = "">
-				{{ form.csrf_token }}
-				{{ form.body(class = "ckeditor") }}
-				<br>
-				<button type="submit" class="btn btn-success">提交</button>
-			</form>
-		</div>
+			{% if form %}
+				<div>
+					<form method="post" action = "">
+						{{ form.csrf_token }}
+						{{ form.body(class = "ckeditor") }}
+						<br>
+						<button type="submit" class="btn btn-success">提交</button>
+					</form>
+				</div>
+			{% endif %}
 		{% endif %}
 	</div>
 	<br>
 	<div>
 		{% if posts %}
 			{% include '_posts.html' %}
+			{% if pagination %}
 			<div class="pagination">
 				{{ macros.pagination_widget(pagination,'main.index') }}
 			</div>
+			{% endif %}
 		{% else %}
 			暂无文章。
 		{% endif %}
