--- a/app/templates/myfollow_posts.html
+++ b/app/templates/myfollow_posts.html
@@ -6,6 +6,14 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block page_content %}
+<div class="page-header">
+		{% if current_user == user %}
+		<h4>Hello，{{current_user.username}}。以下是你的关注。
+		{% else %}
+		无。
+		{% endif %}
+		</h4>
+</div>
 	
 	<div>
 		{% if posts %}
