--- a/app/templates/sh_results.html
+++ b/app/templates/sh_results.html
@@ -6,7 +6,7 @@
 
 {% block page_content %}
 	<div class="page-header">
-		<h3>关键词："{{ keywords }}"</h3>
+		<h3>关键词："{{ keywords }}"，共搜索到<strong> {{ count }} </strong>条结果</h3>
 	</div>
 
 	{% if posts %}
