--- a/app/templates/myfollow_posts.html
+++ b/app/templates/myfollow_posts.html
@@ -8,7 +8,7 @@
 {% block page_content %}
 <div class="page-header">
 		{% if current_user == user %}
-		<h4>Hello，{{current_user.username}}。以下是你的关注。
+		<h4>Hello，{{current_user.username}}。以下是你的关注（包括了你自己的文章）。
 		{% else %}
 		无。
 		{% endif %}
