--- a/app/templates/auth/changepassword.html
+++ b/app/templates/auth/changepassword.html
@@ -4,6 +4,17 @@
 {% block title %}修改密码{% endblock %}
 
 
+{% block scripts %}
+{{ super() }}
+<script>
+    $("#submit").attr("class", "btn btn-success");
+    $("#submit").css({
+        "width":"100%",
+        "margin-bottom":"10px"
+        });
+</script>
+{% endblock %}
+
 {% block page_content %}
 	<div class = "page-header"><h1>修改密码</h1></div>
 	<div class = 'col-md-4'>
